# litebringer-bot

./: .gitignore  CMakeLists.txt  OpenCV_Debug.props  README.md  litebringer_bot.cpp  litebringer_bot.sln  litebringer_bot.vcxproj  litebringer_bot.vcxproj.filters
dependencies/: CMakeLists.txt
include/: litebringer_bot.hpp
src/: litebringer_bot.cpp  main.cpp
